@@ -1,3 +1,8 @@
+2011-01-09  Grégoire Sutre  <gregoire.sutre@gmail.com>
+
+	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Handle
+	openbsd and netbsd types being in part_bsd module.
+
 2011-01-08  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* config.h.in (_LARGEFILE_SOURCE): Add missing define.
